# aurelius

./: .gitignore  CMakeLists.txt  README.md  avx_test  avx_test.c  main.py
src/: CMakeLists.txt  aurelius  main.cc  main.cpp
src/aurelius/: initialization.hh  layer.hh
src/aurelius/activations/: relu.hh  sigmoid.hh  softmax.hh
src/aurelius/attention_mechanism/: attention.hh  multi_head_attention.hh  positional_encoding.hh  rope.hh
src/aurelius/conv/: Conv1d.hh  Conv2d.hh  conv_layer.hh
src/aurelius/linear/: linear.hh
src/aurelius/loss_functions/: binary_cross_entropy.hh  binary_cross_entropy_with_logits.hh  cross_entropy.hh  cross_entropy_loss.hh  cross_entropy_with_logits.hh  loss.hh  mae_loss.hh  mse_loss.hh
src/aurelius/normalization/: batch_normalization.hh
src/aurelius/optimizers/: adam_optimizer.hh  momentum_optimizer.hh  optimizer.hh  sdg_optimizer.hh
src/examples/: example_linear.cc
src/modules/: batch_normalization.hh  linear.hh
src/modules/activations/: relu.hh  sigmoid.hh
src/modules/attention_mechanism/: attention.hh  multi_head_attention.hh  positional_encoding.hh  rope.hh
src/modules/layer/: layer.hh
src/modules/layer/linear/: linear.hh
src/modules/layers/: layer.hh
src/modules/layers/conv/: Conv1d.hh  Conv2d.hh  Conv3d.hh
src/modules/layers/linear/: linear.hh
src/modules/layers/normalization/: batch_normalization.hh  instance_normalization.hh
src/modules/loss_functions/: binary_cross_entropy.hh  binary_cross_entropy_with_logits.hh  cross_entropy.hh  loss.hh  mae_loss.hh  mse_loss.hh
src/modules/models/: AlexNet.hh
src/modules/optimizers/: adam_optimizer.hh  momentum_optimizer.hh  optimizer.hh  sdg_optimizer.hh
